# Editor

./: CMakeLists.txt  main.cpp
class/editor/: Editor.cpp  Editor.ui
class/include/: Editor.h
